crates/musli-tests/tests/ui/private_fn_error.stderr
error[E0603]: function `decode` is private
  --> tests/ui/private_fn_error.rs:5:26
   |
5  |     #[musli(with = self::array::<_, 4>)]
   |                          ^^^^^ private function
   |
note: the function `decode` is defined here
  --> tests/ui/private_fn_error.rs:23:5
   |
23 | /     fn decode<'de, 'buf, M, C, D, T, const N: usize>(cx: &mut C, decoder: D) -> Result<[T; N], C::Error>
24 | |     where
25 | |         M: Mode,
26 | |         C: Context<'buf, Input = D::Error>,
...  |
29 | |         todo!()
30 | |     }
   | |_____^
